# DeezKeys

./: README.md  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.tsx  index.css  index.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/macos/: keyboard_listener.rs
src/components/: modifiers.tsx
src/services/: keys.ts
src/stores/: modifiers.ts
