[package]
name = "deez-keys"
version = "0.0.0"
description = "Display pressed keys on the screen"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["global-shortcut-all", "shell-open", "window-set-cursor-position"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
enigo = "0.1.2"
rdev = "0.5.2"
# Listening events on MacOS (manual impl)
core-graphics = "0.22.2"
cocoa = "0.24"
core-foundation = "0.9.3"
core-foundation-sys = { version = "0.8.4" }
lazy_static = "1.4.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
